module name changed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "92tjdwhd-test-npm",
+  "name": "react-native-keywallet-hid",
   "version": "1.0.0",
   "description": "",
   "main": "index.android.js",
