--- a/android/.project
+++ b/android/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>92tjdwhd-test-npm</name>
-	<comment>Project 92tjdwhd-test-npm created by Buildship.</comment>
+	<name>react-native-keywallet-hid-npm</name>
+	<comment>Project react-native-keywallet-hid-npm created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
