--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@keypair/react-native-keywallet-hid",
   "version": "1.0.0",
-  "description": "",
+  "description": "Written by Seongjong Park and Byeongcheol Yoo",
   "main": "index.android.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/regalfaith/react-native-keywallet-hid.git"
   },
-  "homepage": "https://github.com/regalfaith/react-native-keywallet-hid#readme"
+  "homepage": "https://github.com/regalfaith/react-native-keywallet-hid#readme",
+  "keywords": [
+    "keywallet",
+    "hid",
+    "keypair"
+  ]
 }
